# macro-regime-kit

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
configs/: config.example.yaml
docs/: ai-agents.md  obsidian.md  portfolio-risk-schema.md  quickstart.md  release.md
examples/: sample_portfolio_risk.json  sample_state.json
examples/sample_obsidian_vault/投资论点/NVDA/: nvda-thesis.md
scripts/: secret_scan.py
skills/macro-regime-monitor/references/: output_schema.md
src/macro_regime/: __init__.py  cli.py  config.py  fred_client.py  obsidian.py  portfolio.py  regime.py  thesis_feedback.py  util.py  weekly.py
src/macro_regime/resources/skills/macro-regime-monitor/: SKILL.md
src/macro_regime/resources/skills/macro-regime-monitor/agents/: openai.yaml
src/macro_regime/resources/skills/macro-regime-monitor/references/: obsidian_workflow.md  portfolio_transmission.md
tests/: test_obsidian.py  test_portfolio.py  test_regime.py  test_thesis_feedback.py
